# advent_of_code_2024

./: README.md
day03/CMakeProject/: CMakeLists.txt  CMakeProject.cpp
day04/CMakeProject/: CMakeProject.cpp
day05/CMakeProject/: CMakeLists.txt  CMakeProject.cpp  sorter.cpp
day05/CMakeProject/infrastructure/: file_reader.hpp
day05/CMakeProject/input_data/: puzzle_data.cpp  puzzle_data.hpp
day06/CMakeProject/: CMakeProject.cpp  text_based_grid.cpp  text_based_grid.hpp
day06_csharp/ConsoleApp/: ArrayBased2DGrid.cs  ArrayBased3DGrid.cs  InputParser.cs  IntBasedGrid.cs  LongBasedGridExtensions.cs  OptimizedPath.cs  Position.cs  Program.cs  RecordBasedGrid.cs  TextBasedGrid.cs
day07_csharp/ConsoleApp/: InputParser.cs  Program.cs
day08_csharp/ConsoleApp/: InputParser.cs  Position.cs  Program.cs  TextBasedGrid.cs
day09_csharp/ConsoleApp/: ConsoleApp.csproj  DataPart2.cs  EquationSolver.cs  InputParser.cs  Position.cs  Program.cs
day1/CMakeProject/: CMakeLists.txt  CMakeProject.cpp  input_parser.cpp  input_parser.hpp
day14_csharp/: ConsoleApp.csproj  InputParser.cs  PacmanGrid.cs  Position.cs  Program.cs  Topology.cs  Vector.cs
day15_csharp/: ConsoleApp.csproj  InputParser.cs  Program.cs  TextBasedGrid.cs  TextBasedGridExtensions.cs
day22_csharp/: ConsoleApp.csproj  InputParser.cs  Program.cs  SecretNumber.cs
day23_csharp/: ConsoleApp.sln  InputParser.cs  Lan.cs  Program.cs
day24_csharp/: InputParser.cs  Program.cs  Register.cs
day25_csharp/: InputParser.cs  LockOrKey.cs  Program.cs
template/: Position.cs  Program.cs  TextBasedGridExtensions.cs
(+49 files in other folders)
